--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <header>
-        <h1>HotelMax</h1>
+        <img src="87_home_leaf.jpg" width="50px" class="logo">
+        <h1 class="title">HotelMax</h1>
     </header>
 
     <div class="loginFrm">  
