--- a/ForgotPassword.html
+++ b/ForgotPassword.html
@@ -1,31 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nueva contraseña</title>
-    <link rel="stylesheet" href="ForgotPasswordStyle.css">
-</head>
-<body>
-<!-- El header donde esta el nombre del software y el logo-->
+    <link
+      rel="stylesheet"
+      href="/IngenieriaDeSoftware/css/ForgotPasswordStyle.css"
+    />
+  </head>
+  <body>
+    <!-- El header donde esta el nombre del software y el logo-->
     <header>
-        <img src="87_home_leaf.jpg" width="50px" class="logo">
-        <h1 class="title">HotelMax</h1>
+      <a href="Index.html"
+        ><img
+          src="/IngenieriaDeSoftware/media/87_home_leaf.jpg"
+          width="50px"
+          class="logo"
+      /></a>
+      <h1 class="title">HotelMax</h1>
     </header>
-<!-- El formulario donde se ingresa el usuario para validar su existenscia-->
+    <!-- El formulario donde se ingresa el usuario para validar su existenscia-->
     <div class="loginFrm">
-        <h1>Cambiar contraseña</h1>
-        <form>
-            <label for="User">Usuario</label>
-            <input type="text" name="user" id="user">
-            <br>
-            <button>Validar</button>
-        </form>
+      <h1>Cambiar contraseña</h1>
+      <form>
+        <label for="user">Usuario</label>
+        <input type="text" name="user" id="user" />
+        <label for="newPassword">Ingresa la nueva contraseña</label>
+        <input type="password" name="newPassword" id="newPassword">
+        <label for="newPassword2">Ingresa nuevamente la contraseña</label>
+        <input type="password" name="newPassword2" id="newPassword2">
+        <br />
+        <button>Validar</button>
+      </form>
     </div>
- 
-<!-- El footer donde dice todos los derechos reservados-->
+
+    <!-- El footer donde dice todos los derechos reservados-->
     <footer>
-        <p>Todos los derechos reservados</p>
+      <p>Todos los derechos reservados</p>
     </footer>
-</body>
+  </body>
 </html>
