--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <link rel="stylesheet" href="/IngenieriaDeSoftware/css/IndexStyle.css" />
+    <link rel="stylesheet" href="IndexStyle.css" />
   </head>
   <body>
     <header>
       <a href="Index.html"
         ><img
-          src="/IngenieriaDeSoftware/media/87_home_leaf.jpg"
+          src="87_home_leaf.jpg"
           width="50px"
           class="logo"
       /></a>
@@ -38,5 +38,5 @@
       <p>Todos los derechos reservados</p>
     </footer>
   </body>
-  <script src="/IngenieriaDeSoftware/javascript/indexMain.js"></script>
+  <script src="indexMain.js"></script>
 </html>
