--- a/Register.html
+++ b/Register.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/IngenieriaDeSoftware/css/RegisterStyle.css" />
+    <link rel="stylesheet" href="RegisterStyle.css" />
   </head>
   <body>
     <header>
       <a href="Index.html"
         ><img
-          src="/IngenieriaDeSoftware/media/87_home_leaf.jpg"
+          src="87_home_leaf.jpg"
           width="50px"
           class="logo"
       /></a>
