--- a/ForgotPassword.html
+++ b/ForgotPassword.html
@@ -6,7 +6,7 @@
     <title>Nueva contraseña</title>
     <link
       rel="stylesheet"
-      href="/IngenieriaDeSoftware/css/ForgotPasswordStyle.css"
+      href="ForgotPasswordStyle.css"
     />
   </head>
   <body>
@@ -14,7 +14,7 @@
     <header>
       <a href="Index.html"
         ><img
-          src="/IngenieriaDeSoftware/media/87_home_leaf.jpg"
+          src="87_home_leaf.jpg"
           width="50px"
           class="logo"
       /></a>
