--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a href="Index.html"
+      <a href="index.html"
         ><img
           src="87_home_leaf.jpg"
           width="50px"
