--- a/ForgotPassword.html
+++ b/ForgotPassword.html
@@ -12,7 +12,7 @@
   <body>
     <!-- El header donde esta el nombre del software y el logo-->
     <header>
-      <a href="Index.html"
+      <a href="index.html"
         ><img
           src="87_home_leaf.jpg"
           width="50px"
